--- a/index.html
+++ b/index.html
@@ -43,8 +43,17 @@
       <input type="text" id="location" name="location">
       <label for="category">Category:</label>
       <select id="category" name="category">
-        <option value="Recurring">Recurring</option>
-        <option value="One Time">One Time</option>
+        <option value="Fuel">Fuel</option>
+        <option value="Bills & Recharges">Bills & Recharges</option>
+        <option value="Grocery & Kirana">Grocery & Kirana</option>
+        <option value="Saag Sabji">Saag Sabji</option>
+        <option value="Fruits">Fruits</option>
+        <option value="Milk">Milk</option>
+        <option value="Medical">Medical</option>
+        <option value="Others">Others</option>
+        <option value="Private">Private</option>
+        <option value="Entertainment">Entertainment</option>
+        <option value="Donations">Donations</option>
       </select>
       <input type="submit" value="Add Expense">
     </form>
