Minor Error Fixed

--- a/expenses.html
+++ b/expenses.html
@@ -33,7 +33,7 @@
       <button onclick="confirmClearStorage()">Clear</button>
       <button onclick="addBalance()">Add</button>
       <button onclick="generatePDF()">Download</button>
-      <button>Refer</button>
+      <button onclick="shareWhatsApp()">Refer</button>
     </div>
 
 
