--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="index.css">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G0Y921MTGZ');
+</script>
+
 </head>
 
 <body>
@@ -63,7 +74,7 @@
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
     <div class="link-container">
       <a href="#" id="todaysReadLink" class="todaysread">Today's Read</a>
-      <a href="budget_planner.html" class="Budget_Planner">Budget Planner</a>
+      <a href="budget_planner_test.html" class="Budget_Planner">Budget Planner</a>
     </div>
 
   </div>
