--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="balance-box">Bal: <span id="availableBalance"></span> Rs</div>
       <div class="balance-box" id="totalMoneySpent">Spent: <span id="totalSpentAmount"></span> Rs</div>
     </div>
-    <p style="text-align: center; color: white; background-color: aqua;  "> HAPPY AUGUST</p>
+    <p style="text-align: center; color: white; background-color:crimson  "> HAPPY AUGUST</p>
     <br>
     <form id="expenseForm">
       <label for="userName">Name:</label>
