Some more changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <div class="balance-box">Bal: <span id="availableBalance"></span> Rs</div>
       <div class="balance-box" id="totalMoneySpent">Spent: <span id="totalSpentAmount"></span> Rs</div>
     </div>
-    <p style="text-align: center; color: white; background-color:crimson  "> HAPPY AUGUST</p>
+
+    <a href="awesome_month/happy_august.html" style="text-decoration: none; display: block;
+    text-align: center; color: white; background-color: crimson;">HAPPY AUGUST</a>
+
     <br>
     <form id="expenseForm">
       <label for="userName">Name:</label>
@@ -73,7 +76,7 @@
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
     <div class="link-container">
       <a href="#" id="todaysReadLink" class="todaysread">Today's Read</a>
-      <a href="budget_planner_test.html" class="Budget_Planner">Budget Planner</a>
+      <a href="/Budget_Planner/budget_planner.html" class="Budget_Planner">Budget Planner</a>
     </div>
 
   </div>
