--- a/Budget_Planner/budget_planner.html
+++ b/Budget_Planner/budget_planner.html
@@ -34,8 +34,8 @@
     
     <div class="button-container">
       <button id="newSection">New</button>
-      <button>MB</button>
-      <button>Go to home</button>
+      <button>MagicButton</button>
+      <button>My Budgets</button>
       <button id="clearStorage">Clear</button>
     </div>
 
