--- a/expenses.html
+++ b/expenses.html
@@ -65,6 +65,8 @@
       <!-- No data message -->
       <p id="successMessage" class="success-message">Data cleared successfully!</p> <!-- Success message -->
     </div>
+    <br>
+     <button class="go-home-btn" onclick="window.location.href='index.html' " >Go to Home</button>
   </div>
 
   <script src="expenses.js"></script>
