--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
     <div class="link-container">
-      <a href="#" id="todaysReadLink" class="todaysread">Today's Read</a>
+     <!--  <a href="#" id="todaysReadLink" class="todaysread">Today's Read</a>      Line to generate dynamic link to articles-->
+      <a href="articles/dynamic_test.html" class="todaysread">Today's Read</a>
       <a href="/Budget_Planner/budget_planner.html" class="Budget_Planner">Budget Planner</a>
     </div>
 
