--- a/trash/article3.html
+++ b/trash/article3.html
@@ -62,9 +62,11 @@
   <h1>Today's Read</h1>
   <p><br>
 
-    I used a strategic approach for saving my money and to keep me motivated towards it. The key to save money is to stay motivated towards the goal or the reason you're saving money for. <br> <br>
+    I used a strategic approach for saving my money. The key to save money is to stay motivated towards the goal or the reason you're saving money for. <br> <br>
 
     Here I will list some of the steps I took to save my money.
+
+
     <br><br>
     1. Create a 30 day budget of the money you can afford to spend in the month and exclude rest of the money for saving. (Say 3k budget and 1k savings if you receive 4k a month)<br><br>
     2. Divide the month in 6 parts containing 5 days each (because dividing them in weeks is too mainstream and boring). Assign money from your budget for the next 5 days according to the expenses you expect. ( Say 500 for 5 days i.e. 100 rs/day)<br><br>
@@ -75,6 +77,8 @@
     Imortance of saving money is felt when you are in need of money and take help from your friends. Every time you delay repaying them you will feel how you should have saved the money so you didn't take it from anybody else.<br>
   </p>
   <p class="author">Author - Ankush Mishra (Quora)</p>
+
+  
 </body>
 
 </html>
