--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       <button id="toggleButton"></button>
     </div>
 
+    <div class="settings-button-wrapper2">
+      <button id="settingsButton" onclick="window.location.href='user_settings/user_settings.html' ">☰</button>
+    </div>
+
+
+
     <h1>--Spend-WISE</h1>
     <div class="bal-container">
       <div class="balance-box">Bal: <span id="availableBalance"></span> Rs</div>
@@ -55,7 +61,9 @@
       <label for="location">Location:</label>
       <input type="text" id="location" name="location">
       <label for="category">Category:</label>
+
       <select id="category" name="category">
+        <option value="" selected disabled hidden>Select a category</option>
         <option value="Fuel">Fuel</option>
         <option value="Bills & Recharges">Bills & Recharges</option>
         <option value="Grocery & Kirana">Grocery & Kirana</option>
@@ -68,6 +76,7 @@
         <option value="Entertainment">Entertainment</option>
         <option value="Donations">Donations</option>
       </select>
+
       <input type="submit" value="Add Expense">
     </form>
     <p id="successMessage" style="display: none; text-align: center; color: rgb(255, 255, 255);">Data submitted
