Removed reduance code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="index.css">
 
-  <!-- Google tag (gtag.js) -->
+  <!-- Google tag for analysis purpose -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
   <div class="container" id="container">
     <div class="button-wrapper">
       <button id="toggleButton"></button>
@@ -36,7 +37,6 @@
     <div class="settings-button-wrapper2">
       <button id="settingsButton" onclick="window.location.href='user_settings/user_settings.html' ">☰</button>
     </div>
-
 
 
     <h1>--Spend-WISE</h1>
@@ -84,13 +84,15 @@
 
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
     <div class="link-container">
-     <!--  <a href="#" id="todaysReadLink" class="todaysread">Today's Read</a>      Line to generate dynamic link to articles-->
       <a href="articles/dynamic_test.html" class="todaysread">Today's Read</a>
       <a href="/Budget_Planner/budget_planner.html" class="Budget_Planner">Budget Planner</a>
     </div>
 
   </div>
 
+
+
+  
   <script src="index.js"></script>
   <script>
     // Set default date to today
