--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       <div class="balance-box" id="totalMoneySpent">Spent: <span id="totalSpentAmount"></span> Rs</div>
     </div>
 
-    <a href="awesome_month/happy_august.html" style="text-decoration: none; display: block;
-    text-align: center; color: white; background-color: crimson;">HAPPY AUGUST</a>
+    <a href="awesome_month/happy_august.html" class="awesome-month">HAPPY AUGUST</a>
 
     <br>
     <form id="expenseForm">
