--- a/awesome_month/happy_august.html
+++ b/awesome_month/happy_august.html
@@ -34,7 +34,7 @@
         </li><br>
 
         <li>
-          The Roman Emperor Augustus defeated Cleopatra and Mark Antony in August.</b>.
+          The Roman Emperor Augustus <a href="https://en.wikipedia.org/wiki/War_of_Actium">defeated</a> Cleopatra and Mark Antony in August.</b>.
         </li><br>
 
 
