--- a/expenses.html
+++ b/expenses.html
@@ -56,7 +56,7 @@
             <th>Date</th>
             <th>Location</th>
             <th>Category</th>
-            <th>Mark As Wasted?</th>
+            <th>Wasted?</th>
           </tr>
         </thead>
         <tbody id="expenseTableBody"></tbody>
