--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="link-container">
       <a href="articles/dynamic_test.html" class="todaysread">Today's Read</a>
       <a href="/Budget_Planner/budget_planner.html" class="Budget_Planner">Budget Planner</a>
+      <a href="/Mini Games/mini_games.html" class="mini_games">Mini Games</a>
     </div>
 
   </div>
