--- a/awesome_month/happy_august.html
+++ b/awesome_month/happy_august.html
@@ -33,17 +33,23 @@
           August was originally named Sextilis in Latin, as it was the sixth month in the early Roman calendar.
         </li><br>
 
-        <li>
-          The Roman Emperor Augustus <a href="https://en.wikipedia.org/wiki/War_of_Actium">defeated</a> Cleopatra and Mark Antony in August.</b>.
-        </li><br>
+        <img src="/awesome_month/august/Castro_Battle_of_Actium.jpg">
 
+        <li>
+  
+          The Roman Emperor Augustus <a href="https://en.wikipedia.org/wiki/War_of_Actium" target="_blank">defeated</a>
+          Cleopatra and Mark Antony in August.</b>.
+        </li><br>
 
         <li>
           This victory helped solidify his power and the month was later named in his honor. <b>Augustus Caesar</b>.
         </li><br>
+        
+        <img src="/awesome_month/august/1080px-Siege-alesia-vercingetorix-jules-cesar.jpg">
 
         <li>
-          August has 31 days because Augustus wanted his month to be as long as Julius Caesar’s (July).
+          August has 31 days because Augustus wanted his month to be as long as <a
+            href="https://en.wikipedia.org/wiki/Julius_Caesar" target="_blank"> Julius Caesar</a>’s (July).
         </li><br>
 
         <li>
@@ -55,24 +61,25 @@
         </li><br>
 
         <li>
-Elvis Presley died in August — on August 16, 1977, an event mourned by millions worldwide.
+          Elvis Presley died in August — on August 16, 1977, an event mourned by millions worldwide.
         </li><br>
 
         <li>
-August is the most popular birth month in the U.S.
+          August is the most popular birth month in the U.S.
         </li><br>
 
 
         <li>
-Perseid meteor shower peaks in mid-August every year.
+          Perseid meteor shower peaks in mid-August every year.
         </li><br>
 
         <li>
-August 24, 79 AD Mount Vesuvius erupted, burying Pompeii and Herculaneum town, one of the most famous volcanic disasters in history.
+          August 24, 79 AD Mount Vesuvius erupted, burying Pompeii and Herculaneum town, one of the most famous volcanic
+          disasters in history.
         </li><br>
 
         <li>
-In the Southern Hemisphere, August is the equivalent of February.
+          In the Southern Hemisphere, August is the equivalent of February.
         </li><br>
 
       </ul>
