--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <input type="submit" value="Add Expense">
     </form>
-    <p id="successMessage" style="display: none; text-align: center; color: rgb(255, 255, 255);">Data submitted
+    <p id="successMessage" style="display: none; text-align: center; color: rgb(255, 255, 255); margin-top: 0;">Data submitted
       successfully!</p>
 
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
