--- a/Mini Games/five_catch_the_falling_food.html
+++ b/Mini Games/five_catch_the_falling_food.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mini Games</title>
+    <title>Catch the falling food</title>
 </head>
 <body>
-    <button onclick="window.location.href='five_catch_the_falling_food.html'">Catch the falling food</button>
+    <h1>Catch the falling food</h1>
 </body>
 </html>
