--- a/awesome_month/happy_august.html
+++ b/awesome_month/happy_august.html
@@ -61,20 +61,19 @@
         </li><br>
 
         <li>
-          Elvis Presley died in August — on August 16, 1977, an event mourned by millions worldwide.
+          <a href="https://en.wikipedia.org/wiki/Elvis_presley">Elvis Presley</a> died in August — on August 16, 1977, an event mourned by millions worldwide.
         </li><br>
 
+    
         <li>
-          August is the most popular birth month in the U.S.
+          <a href="https://en.wikipedia.org/wiki/Perseids">Perseids</a> meteor shower peaks in mid-August every year.
         </li><br>
 
+        <img src="august/1920px-Antigua_ciudad_de_Herculano,_Italia,_2023-03-27,_DD_135-138_PAN.jpg"> 
+        <img src="august/1280px-Il_cratere_del_Vulcano_-_panoramio.jpg">
 
         <li>
-          Perseid meteor shower peaks in mid-August every year.
-        </li><br>
-
-        <li>
-          August 24, 79 AD Mount Vesuvius erupted, burying Pompeii and Herculaneum town, one of the most famous volcanic
+          August 24, 79 AD <a href="https://en.wikipedia.org/wiki/Mount_Vesuvius">Mount Vesuvius</a> erupted, burying <a href="https://en.wikipedia.org/wiki/Pompeii">Pompeii</a> and <a href="https://en.wikipedia.org/wiki/Herculaneum">Herculaneum</a> town, one of the most famous volcanic
           disasters in history.
         </li><br>
 
