--- a/Mini Games/mini_games.html
+++ b/Mini Games/mini_games.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <button onclick="window.location.href='five_catch_the_falling_food.html'">Catch the falling food</button>
+    <button onclick="window.location.href='five_catch_alt.html'">Catch the falling food 2</button>
 </body>
 </html>
