--- a/index.html
+++ b/index.html
@@ -16,13 +16,30 @@
   <link rel="stylesheet" href="index.css">
 
   <!-- Google tag for analysis purpose -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'G-G0Y921MTGZ');
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
+
+
+  <script>
+
+    const localhosts = ['localhost', '127.0.0.1', '127.0.0.2'];
+
+    if (!localhosts.includes(window.location.hostname)) {
+
+      // GA4 Tracking code
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-G0Y921MTGZ');
+      
+    }
+
+    else {
+      console.log('Google Analystics disabled for Local Enviornment');
+    }
+
+
   </script>
 
 </head>
@@ -78,7 +95,8 @@
 
       <input type="submit" value="Add Expense">
     </form>
-    <p id="successMessage" style="display: none; text-align: center; color: rgb(255, 255, 255); margin-top: 0;">Data submitted
+    <p id="successMessage" style="display: none; text-align: center; color: rgb(255, 255, 255); margin-top: 0;">Data
+      submitted
       successfully!</p>
 
     <button class="past-expenses-btn" onclick="window.location.href='expenses.html';">Past Expenses</button><br>
@@ -92,7 +110,7 @@
 
 
 
-  
+
   <script src="index.js"></script>
   <script>
     // Set default date to today
