--- a/expenses.html
+++ b/expenses.html
@@ -19,14 +19,30 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.15/jspdf.plugin.autotable.js"></script>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0Y921MTGZ"></script>
 
-  gtag('config', 'G-G0Y921MTGZ');
-</script>
+
+  <script>
+
+    const localhosts = ['localhost', '127.0.0.1', '127.0.0.2'];
+
+    if (!localhosts.includes(window.location.hostname)) {
+
+      // GA4 Tracking code
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-G0Y921MTGZ');
+      
+    }
+
+    else {
+      console.log('Google Analystics disabled for Local Enviornment');
+    }
+
+
+  </script>
 
 </head>
 
