Changed month to september

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="balance-box" id="totalMoneySpent">Spent: <span id="totalSpentAmount"></span> Rs</div>
     </div>
 
-    <a href="awesome_month/happy_august.html" class="awesome-month">HAPPY AUGUST</a>
+    <a href="" class="awesome-month">NEW SEPTEMBER</a>
 
     <br>
     <form id="expenseForm">
