--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="balance-box" id="totalMoneySpent">Spent: <span id="totalSpentAmount"></span> Rs</div>
     </div>
 
-    <a href="" class="awesome-month">NEW SEPTEMBER</a>
+    <a href="" class="awesome-month">Happy November</a>
 
     <br>
     <form id="expenseForm">
