--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <a href="" class="awesome-month">Happy November</a>
+      <a href="" class="awesome-month">Goodbye 2025 / Welcome 2026</a>
 
       <br />
       <form id="expenseForm">
